skiplang/compiler/invalid_tests/expand/macro_toplevel_fun_native.sk
native macro fun foo(): Int;

fun main(): void {
  void
}
